Added Supabase API Keys

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script>
       // Supabase configuration
-      const supabaseUrl = 'https://your-project-url.supabase.co'; // Replace with your Supabase URL
-      const supabaseKey = 'your-public-api-key'; // Replace with your Supabase public API key
+      const supabaseUrl = 'https://fgjfdtzilbccycwsbnxw.supabase.co'; // Replace with your Supabase URL
+      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZnamZkdHppbGJjY3ljd3Nibnh3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjA0NDgzMjIsImV4cCI6MjAzNjAyNDMyMn0.QArYLSZuoZotKCfnR5Mu--dZCgvNqfMnaKiJ6zCM0WI'; // Replace with your Supabase public API key
       const supabase = supabase.createClient(supabaseUrl, supabaseKey);
     </script>
 </head>
