--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chassis Tracking App</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Add Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-    <script>
-      // Your Firebase configuration
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
+      import { getFirestore, collection, addDoc, getDocs, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
+
+      // Your web app's Firebase configuration
       const firebaseConfig = {
         apiKey: "AIzaSyBZuFsJ6mwj6_zBX4DMsB_70td5WS_XQLU",
         authDomain: "ezimer-tracking-c9237.firebaseapp.com",
@@ -21,9 +22,15 @@
       };
 
       // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.firestore();
+      const app = initializeApp(firebaseConfig);
+      const db = getFirestore(app);
       window.db = db; // Make db globally accessible
+      window.collection = collection; // Make collection globally accessible
+      window.addDoc = addDoc; // Make addDoc globally accessible
+      window.getDocs = getDocs; // Make getDocs globally accessible
+      window.updateDoc = updateDoc; // Make updateDoc globally accessible
+      window.deleteDoc = deleteDoc; // Make deleteDoc globally accessible
+      window.doc = doc; // Make doc globally accessible
     </script>
 </head>
 <body>
@@ -70,6 +77,6 @@
             <!-- Rows will be added here dynamically -->
         </tbody>
     </table>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
