--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module">
       // Import the functions you need from the SDKs you need
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
-      import { getFirestore, collection, addDoc, getDocs, updateDoc, deleteDoc, doc } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore.js";
 
       // Your web app's Firebase configuration
       const firebaseConfig = {
@@ -25,12 +25,6 @@
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
       window.db = db; // Make db globally accessible
-      window.collection = collection; // Make collection globally accessible
-      window.addDoc = addDoc; // Make addDoc globally accessible
-      window.getDocs = getDocs; // Make getDocs globally accessible
-      window.updateDoc = updateDoc; // Make updateDoc globally accessible
-      window.deleteDoc = deleteDoc; // Make deleteDoc globally accessible
-      window.doc = doc; // Make doc globally accessible
     </script>
 </head>
 <body>
