--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <label for="account">Account:</label>
                 <select id="account" required>
                     <option value="BBB">BBB</option>
-                    <option value="Chassis-King">Chassis King</option>
+                    <option value="Chassis King">Chassis King</option>
                     <option value="CIT">CIT</option>
-                    <option value="CLC-Chassis">CLC Chassis</option>
-                    <option value="CLC-Dry">CLC Dry</option>
+                    <option value="CLC Chassis">CLC Chassis</option>
+                    <option value="CLC Dry">CLC Dry</option>
                     <option value="DCLI">DCLI</option>
                     <option value="IMC">IMC</option>
                     <option value="Milestone">Milestone</option>
