Updated Statuses index.html

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
                 <input type="text" id="chassis-number" required>
                 <label for="status">Status:</label>
                 <select id="status" required>
-                    <option value="In Service">In Service</option>
-                    <option value="Out of Service">Out of Service</option>
-                    <!-- Add more options as needed -->
+                    <option value="Awaiting Estimate">Awaiting Estimate</option>
+                    <option value="Awaiting Approval">Awaiting Approval</option>
+                    <option value="AP - Awaiting Repair">AP - Awaiting Repair</option>
+                    <option value="AP - Under Repair">AP - Under Repair</option>
+                    <option value="Repairs Complete">Repairs Complete</option>
                 </select>
                 <label for="comments">Comments:</label>
                 <textarea id="comments"></textarea>
