--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <th>Account</th>
                 <th>Chassis Number</th>
                 <th>Status</th>
+                <th>Aging</th>
                 <th>Comments</th>
                 <th>Actions</th>
             </tr>
