--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <th>Chassis Number</th>
                 <th>Status</th>
                 <th>Comments</th>
+                <th>RTAT</th>
                 <th>Actions</th>
             </tr>
         </thead>
