--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
         </div>
     </div>
 
+    <!-- Comments Popup -->
+    <div id="comments-popup" class="popup">
+        <div class="popup-content">
+            <h2>Comments</h2>
+            <p id="comments-content"></p>
+            <button id="close-comments-popup">Close</button>
+        </div>
+    </div>
+
     <h2>Chassis List</h2>
     <table id="chassis-table">
         <thead>
