--- a/index.html
+++ b/index.html
@@ -73,21 +73,23 @@
     </div>
 
     <h2>Chassis List</h2>
-    <table id="chassis-table">
-        <thead>
-            <tr>
-                <th>Account</th>
-                <th>Chassis Number</th>
-                <th>Status</th>
-                <th>Comments</th>
-                <th>RTAT</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Rows will be added here dynamically -->
-        </tbody>
-    </table>
+    <div class="table-wrapper">
+        <table id="chassis-table">
+            <thead>
+                <tr>
+                    <th>Account</th>
+                    <th>Chassis Number</th>
+                    <th>Status</th>
+                    <th>Comments</th>
+                    <th>RTAT</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Rows will be added here dynamically -->
+            </tbody>
+        </table>
+    </div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
