--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         <table id="chassis-table">
             <thead>
                 <tr>
-                    <th>Account</th>
-                    <th>Chassis Number</th>
-                    <th>Status</th>
+                    <th onclick="sortTable('account')">Account</th>
+                    <th onclick="sortTable('chassis_number')">Chassis Number</th>
+                    <th onclick="sortTable('status')">Status</th>
                     <th>Comments</th>
                     <th>RTAT</th>
                     <th>Actions</th>
