--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
     </div>
 
     <h2>Chassis List</h2>
+    <div class="sort-buttons">
+        <button onclick="sortTable('account')">Sort by Account</button>
+        <button onclick="sortTable('chassis_number')">Sort by Chassis Number</button>
+        <button onclick="sortTable('status')">Sort by Status</button>
+    </div>
     <div class="table-wrapper">
         <table id="chassis-table">
             <thead>
