--- a/index.html
+++ b/index.html
@@ -73,10 +73,13 @@
     </div>
 
     <h2>Chassis List</h2>
-    <div class="sort-buttons">
-        <button onclick="sortTable('account')">Sort by Account</button>
-        <button onclick="sortTable('chassis_number')">Sort by Chassis Number</button>
-        <button onclick="sortTable('status')">Sort by Status</button>
+    <div class="sort-section">
+        <p>Sort By:</p>
+        <div class="sort-buttons">
+            <button onclick="sortTable('account')">Account</button>
+            <button onclick="sortTable('chassis_number')">Chassis Number</button>
+            <button onclick="sortTable('status')">Status</button>
+        </div>
     </div>
     <div class="table-wrapper">
         <table id="chassis-table">
