--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 <input type="text" id="chassis-number" required>
                 <label for="status">Status:</label>
                 <select id="status" required>
-                    <option value="Awaiting Estimate">Awaiting Estimate</option>
-                    <option value="Awaiting Approval">Awaiting Approval</option>
-                    <option value="AP - Awaiting Repair">AP - Awaiting Repair</option>
-                    <option value="AP - Under Repair">AP - Under Repair</option>
+                    <option value="AE">Awaiting Estimate</option>
+                    <option value="AE">Awaiting Approval</option>
+                    <option value="AP">Approved</option>
+                    <option value="Under Repair">Under Repair</option>
                 </select>
                 <label for="comments">Comments:</label>
                 <textarea id="comments"></textarea>
