--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 <label for="status">Status:</label>
                 <select id="status" required>
                     <option value="AE">Awaiting Estimate</option>
-                    <option value="AE">Awaiting Approval</option>
-                    <option value="AP">Approved</option>
+                    <option value="AA">Awaiting Approval</option>
+                    <option value="AR">Awaiting Repair</option>
                     <option value="Under Repair">Under Repair</option>
                 </select>
                 <label for="comments">Comments:</label>
