--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EZIMER Tracking</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script type="module">
       // Imported functions from SDKs
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
@@ -100,12 +100,12 @@
     
     <!-- Add Chassis Button for Desktop -->
     <div id="add-chassis-button-desktop" class="add-button-desktop">
-        <i class="fa-solid fa-plus"></i>
+        <i class="fa fa-plus" aria-hidden="true"></i>
     </div>
 
     <!-- Add Chassis Button for Mobile -->
     <div id="add-chassis-button-mobile" class="add-button-mobile">
-        <i class="fa-solid fa-plus"></i>
+        <i class="fa fa-plus" aria-hidden="true"></i>
     </div>
 
     <script type="module" src="script.js"></script>
