--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
     
     <!-- Add Chassis Button for Desktop -->
     <div id="add-chassis-button-desktop" class="add-button-desktop">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+        <i class="fa-solid fa-plus"></i>
     </div>
 
     <!-- Add Chassis Button for Mobile -->
     <div id="add-chassis-button-mobile" class="add-button-mobile">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+        <i class="fa-solid fa-plus"></i>
     </div>
 
     <script type="module" src="script.js"></script>
