--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EZIMER Tracking</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <script type="module">
       // Imported functions from SDKs
       import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
@@ -98,14 +98,16 @@
         </table>
     </div>
     
-    <!-- Add Chassis Button for Desktop -->
+    <!-- Button for Desktop -->
     <div id="add-chassis-button-desktop" class="add-button-desktop">
         <i class="fa-solid fa-plus"></i>
     </div>
 
-    <!-- Add Chassis Button for Mobile -->
-    <div id="add-chassis-button-mobile" class="add-button-mobile">
-        <i class="fa-solid fa-plus"></i>
+    <!-- Navigation Bar for Mobile -->
+    <div id="bottom-nav-mobile" class="bottom-nav-mobile">
+        <div class="nav-item" id="add-chassis-button-mobile">
+            <i class="fa-regular fa-square-plus"></i>
+        </div>
     </div>
 
     <script type="module" src="script.js"></script>
