--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
                 </select>
                 <label for="comments">Comments:</label>
                 <textarea id="comments"></textarea>
-                <button type="submit">Save</button>
+                <div class="button-group">
+                    <button type="submit">Save</button>
+                    <button type="button" id="close-popup">Close</button>
+                </div>
             </form>
-            <button id="close-popup">Close</button>
         </div>
     </div>
 
