--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
       const app = initializeApp(firebaseConfig);
       const db = getFirestore(app);
       window.db = db; // Make db globally accessible
+      window.collection = collection;
+      window.addDoc = addDoc;
+      window.getDocs = getDocs;
+      window.updateDoc = updateDoc;
+      window.deleteDoc = deleteDoc;
+      window.doc = doc;
+      window.serverTimestamp = serverTimestamp;
     </script>
 </head>
 <body>
