--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <option value="AE">Awaiting Estimate</option>
                     <option value="AA">Awaiting Approval</option>
                     <option value="AR">Awaiting Repair</option>
-                    <option value="Under Repair">Under Repair</option>
+                    <option value="UR">Under Repair</option>
                     <option value="GO">Repairs Completed</option>
                 </select>
                 <label for="comments">Comments:</label>
