--- a/index.html
+++ b/index.html
@@ -119,9 +119,11 @@
         </table>
     </div>
     
-    <!-- Button for Desktop -->
-    <div id="add-chassis-button-desktop" class="add-button-desktop">
-        <i class="fa-solid fa-plus"></i>
+    <!-- Navigation Bar for Desktop -->
+    <div id="bottom-nav-desktop" class="bottom-nav-desktop">
+        <div class="nav-item" id="add-chassis-button-desktop">
+            <i class="fa-regular fa-square-plus"></i>
+        </div>
     </div>
 
     <!-- Navigation Bar for Mobile -->
