--- a/index.html
+++ b/index.html
@@ -29,23 +29,30 @@
 </head>
 <body>
     <h1>EZ Repair Tracker</h1>
-    
-    <div id="summary-table-wrapper">
-        <table id="summary-table">
-            <thead>
-                <tr>
-                    <th>Account</th>
-                    <th>AE</th>
-                    <th>AA</th>
-                    <th>AR</th>
-                    <th>UR</th>
-                    <th>GO</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Rows will be injected here -->
-            </tbody>
-        </table>
+
+    <!-- Accounts Overview Lightbox -->
+    <div id="accounts-overview-popup" class="popup">
+        <div class="popup-content">
+            <h2>Accounts Overview</h2>
+            <div id="summary-table-wrapper">
+                <table id="summary-table">
+                    <thead>
+                        <tr>
+                            <th>Account</th>
+                            <th>AE</th>
+                            <th>AA</th>
+                            <th>AR</th>
+                            <th>UR</th>
+                            <th>GO</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Rows will be injected here -->
+                    </tbody>
+                </table>
+            </div>
+            <button id="close-accounts-overview-popup">Close</button>
+        </div>
     </div>
     
     <div id="chassis-popup" class="popup">
@@ -124,12 +131,18 @@
         <div class="nav-item" id="add-chassis-button-desktop">
             <i class="fa-regular fa-square-plus"></i>
         </div>
+        <div class="nav-item" id="accounts-overview-button-desktop">
+            <button>Accounts Overview</button>
+        </div>
     </div>
 
     <!-- Navigation Bar for Mobile -->
     <div id="bottom-nav-mobile" class="bottom-nav-mobile">
         <div class="nav-item" id="add-chassis-button-mobile">
             <i class="fa-regular fa-square-plus"></i>
+        </div>
+        <div class="nav-item" id="accounts-overview-button-mobile">
+            <button>Accounts Overview</button>
         </div>
     </div>
 
