--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EZIMER Tracking</title>
+    <title>EZ Repair Tracker</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="module">
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <h2>Tracked Chassis</h2>
+    <h2>Chassis In Process</h2>
     <div class="sort-section">
         <p>Sort By:</p>
         <div class="sort-buttons">
