--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@
     <div id="bottom-nav-desktop" class="bottom-nav-desktop">
         <div class="nav-item" id="add-chassis-button-desktop">
             <i class="fa-regular fa-square-plus"></i>
+            <p>Add Chassis</p>
         </div>
         <div class="nav-item" id="accounts-overview-button-desktop">
-            <button>Accounts Overview</button>
+            <i class="fa-solid fa-table-list"></i>
+            <p></p>Accounts Overview</p>
         </div>
     </div>
 
@@ -140,9 +142,11 @@
     <div id="bottom-nav-mobile" class="bottom-nav-mobile">
         <div class="nav-item" id="add-chassis-button-mobile">
             <i class="fa-regular fa-square-plus"></i>
+            <p>Add Chassis</p>
         </div>
         <div class="nav-item" id="accounts-overview-button-mobile">
-            <button>Accounts Overview</button>
+            <i class="fa-solid fa-table-list"></i>
+            <p>Accounts Overview</p>
         </div>
     </div>
 
