--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="nav-item" id="accounts-overview-button-desktop">
             <i class="fa-solid fa-table-list"></i>
-            <p></p>Accounts Overview</p>
+            <p>Accounts Overview</p>
         </div>
     </div>
 
