--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <option value="Milestone">Milestone</option>
                     <option value="Trac">Trac</option>
                 </select>
-                <label for="chassis-number">Chassis Number:</label>
-                <input type="text" id="chassis-number" required>
+                <label for="chassis-numbers">Chassis Numbers (one per line):</label>
+                <textarea id="chassis-numbers" required></textarea>
                 <label for="status">Status:</label>
                 <select id="status" required>
                     <option value="AE">Awaiting Estimate</option>
