--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <form id="chassis-form">
                 <label for="account">Account:</label>
                 <select id="account" required>
+                    <option value="" disabled selected>Select Vendor</option>
                     <option value="BBB">BBB</option>
                     <option value="Chassis King">Chassis King</option>
                     <option value="CIT">CIT</option>
@@ -74,6 +75,7 @@
                 <textarea id="chassis-numbers" required></textarea>
                 <label for="status">Status:</label>
                 <select id="status" required>
+                    <option value="" disabled selected>Select Status</option>
                     <option value="AE">Awaiting Estimate</option>
                     <option value="AA">Awaiting Approval</option>
                     <option value="AR">Awaiting Repair</option>
