--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
             <i class="fa-solid fa-table-list"></i>
             <p>Accounts Overview</p>
         </div>
+        <div class="nav-item" id="repaired-chassis-button-desktop">
+            <i class="fa-solid fa-box-archive"></i>
+            <p>Repaired Chassis</p>
+        </div>
+        <div class="nav-item" id="repaired-chassis-button-mobile">
+            <i class="fa-solid fa-box-archive"></i>
+            <p>Repaired Chassis</p>
+        </div>
     </div>
 
     <!-- Navigation Bar for Mobile -->
