--- a/index.html
+++ b/index.html
@@ -130,32 +130,32 @@
     
     <!-- Navigation Bar for Desktop -->
     <div id="bottom-nav-desktop" class="bottom-nav-desktop">
-        <div class="nav-item" id="add-chassis-button-desktop">
-            <i class="fa-regular fa-square-plus"></i>
-            <p>Add Chassis</p>
-        </div>
         <div class="nav-item" id="accounts-overview-button-desktop">
             <i class="fa-solid fa-table-list"></i>
             <p>Accounts Overview</p>
         </div>
+        <div class="nav-item" id="add-chassis-button-desktop">
+            <i class="fa-regular fa-square-plus"></i>
+            <p>Add Chassis</p>
+        </div>
         <div class="nav-item" id="repaired-chassis-button-desktop">
-            <i class="fa-solid fa-box-archive"></i>
+            <i class="fa-regular fa-square-check"></i>
             <p>Repaired Chassis</p>
         </div>
     </div>
 
     <!-- Navigation Bar for Mobile -->
     <div id="bottom-nav-mobile" class="bottom-nav-mobile">
-        <div class="nav-item" id="add-chassis-button-mobile">
-            <i class="fa-regular fa-square-plus"></i>
-            <p>Add Chassis</p>
-        </div>
         <div class="nav-item" id="accounts-overview-button-mobile">
             <i class="fa-solid fa-table-list"></i>
             <p>Accounts Overview</p>
         </div>
+         <div class="nav-item" id="add-chassis-button-mobile">
+            <i class="fa-regular fa-square-plus"></i>
+            <p>Add Chassis</p>
+        </div>
         <div class="nav-item" id="repaired-chassis-button-mobile">
-            <i class="fa-solid fa-box-archive"></i>
+            <i class="fa-regular fa-square-check"></i>
             <p>Repaired Chassis</p>
         </div>
     </div>
