--- a/repaired_chassis.html
+++ b/repaired_chassis.html
@@ -44,5 +44,21 @@
             </tbody>
         </table>
     </div>
+
+    <!-- Navigation Bar for Desktop -->
+    <div id="bottom-nav-desktop" class="bottom-nav-desktop">
+        <div class="nav-item" id="home-button-desktop">
+            <i class="fa-solid fa-house"></i>
+            <p>Home</p>
+        </div>
+    </div>
+
+    <!-- Navigation Bar for Mobile -->
+    <div id="bottom-nav-mobile" class="bottom-nav-mobile">
+        <div class="nav-item" id="home-button-mobile">
+            <i class="fa-solid fa-house"></i>
+            <p>Home</p>
+        </div>
+    </div>
 </body>
 </html>
