--- a/repaired_chassis.html
+++ b/repaired_chassis.html
@@ -36,7 +36,7 @@
                     <th>Chassis Number</th>
                     <th>Status</th>
                     <th>Comments</th>
-                    <th>Archived Date</th>
+                    <th>Repaired On</th>
                 </tr>
             </thead>
             <tbody>
