--- a/repaired_chassis.html
+++ b/repaired_chassis.html
@@ -36,7 +36,8 @@
                     <th>Chassis Number</th>
                     <th>Status</th>
                     <th>Comments</th>
-                    <th>Repaired On</th>
+                    <th>Repaired Date</th>
+                    <th>RTAT</th>
                 </tr>
             </thead>
             <tbody>
@@ -60,5 +61,15 @@
             <p>Home</p>
         </div>
     </div>
+
+    <script>
+        document.getElementById('home-button-desktop').addEventListener('click', function () {
+            window.location.href = 'index.html';
+        });
+
+        document.getElementById('home-button-mobile').addEventListener('click', function () {
+            window.location.href = 'index.html';
+        });
+    </script>
 </body>
 </html>
