--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <!-- Navigation Bar for Desktop -->
     <div id="bottom-nav-desktop" class="bottom-nav-desktop">
         <div class="nav-item" id="accounts-overview-button-desktop">
-            <i class="fa-solid fa-table-list"></i>
+            <i class="fa-solid fa-list"></i>
             <p>Accounts Overview</p>
         </div>
         <div class="nav-item" id="add-chassis-button-desktop">
@@ -147,7 +147,7 @@
     <!-- Navigation Bar for Mobile -->
     <div id="bottom-nav-mobile" class="bottom-nav-mobile">
         <div class="nav-item" id="accounts-overview-button-mobile">
-            <i class="fa-solid fa-table-list"></i>
+            <i class="fa-solid fa-list"></i>
             <p>Accounts Overview</p>
         </div>
          <div class="nav-item" id="add-chassis-button-mobile">
