--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
     </div>
 
-    <h2>Chassis In Process</h2>
+    <h2><span id="chassis-count">0</span> Chassis In Process</h2>
     <div class="sort-section">
         <p>Sort By:</p>
         <div class="sort-buttons">
